@@ -35,7 +35,9 @@ function hadoop_usage
   echo "  proxyserver                           run the web app proxy server"
   echo "  queue                                 prints queue information"
   echo "  resourcemanager                       run the ResourceManager"
-  echo "  resourcemanager -format-state-store   deletes the RMStateStore"
+  echo "                                        Use -format-state-store for deleting the RMStateStore."
+  echo "                                        Use -remove-application-from-state-store <appId> for "
+  echo "                                            removing application from RMStateStore."
   echo "  rmadmin                               admin tools"
   echo "  scmadmin                              SharedCacheManager admin tools"
   echo "  sharedcachemanager                    run the SharedCacheManager daemon"
